--- a/web/src/pages/Home/Home.css
+++ b/web/src/pages/Home/Home.css
@@ -5,7 +5,7 @@ div#page-home {
               linear-gradient(180deg, #F0F0F5 0%, #FFFFFF 100%);
 }
 
-#page-home .content {
+div#page-home .content {
   width: 76%;
   height: 100%;
   max-width: 1100px;
