--- a/web/src/pages/Login/Login.css
+++ b/web/src/pages/Login/Login.css
@@ -1,16 +1,14 @@
-#page-login {
-    width: 100%;
+div#page-login {
     height: 100vh;
-    background: linear-gradient(180deg, #F0F0F5 0%, #FFFFFF 100%);
-    margin: 0 auto;
+    background: none, linear-gradient(180deg, #F0F0F5 0%, #FFFFFF 100%);
+    overflow: hidden;
   }
 
-  #page-login .content {
-    width: 100%;
+  div#page-login div.content {
+    width: 76%;
     height: 100%;
     max-width: 1100px;
     margin: 0 auto;
-    padding: 0 30px 0 30px;
   
     display: flex;
     flex-direction: column;
@@ -18,94 +16,23 @@
   
     /*background-color: tomato;*/
   }
-  
-  #page-login .content header {
-    width: 100%;
-    max-width: 1100px;
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  
-    /*background-color: tomato;*/
-  }
 
-  #page-login .content header div {
-    width: 100%;
-    margin-left: 320px;
-    margin-right: 0;
-    /*margin: 0 0 0 200px;*/
-    align-items: center;
-    display: flex;
-  
-    /*background-color: yellow;*/
-  }
-  
-  #page-login .content header div a {
-    text-decoration: none;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    color: #38607A;
-    margin-left: 60px;
-  }
-  
-  #page-login .content header div a.login {
-    width: 100%;
-    max-width: 99px;
-    height: 30px;
-    background-color: #009BFF;
-    border-radius: 8px;
-    font-weight: bold;
-    line-height: 30px;
-    color: white;
-    text-align: center;
-    /*display: flex;*/
-    overflow: hidden;
-    margin-left: auto;
-    margin-right: 0;
-  }
-  
-  #page-login .content header div a span:hover {
-    color: #0089E1;
-  }
-  
-  #page-login .content header div a.login:hover {
-    background: #0089E1;
-  }
-  
-  #page-create-point header a {
-    color: var(--title-color);
-    font-weight: bold;
-    text-decoration: none;
-  
-    display: flex;
-    align-items: center;
-  }
-  
-  #page-create-point header a svg {
-    margin-right: 16px;
-    color: var(--primary-color);
-  }
-
-  #page-login .content h1 {
+  div#page-login div.content h1 {
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
-    font-size: 36px;
+    font-size: 3.6rem;
     margin-top: 40px;
   }
 
-  #page-login .content span.barra {
+  div#page-login div.content span.barra {
     margin: 10px auto 0px;
     width: 100%;
     height: 10px;
     background: linear-gradient(90deg, #009BFF 0%, rgba(227, 17, 17, 0.85) 100%);
-    display: flex;
   }
   
-  #page-login .content form {
+  div#page-login div.content form {
     margin: 0px auto;
     padding: 40px;
     width: 100%;
@@ -116,57 +43,24 @@
     flex-direction: row;
   }
 
-  #page-login .content form .field-group {
-    margin: 0px auto auto 0px;
+  div#page-login div.content form div.field-group {
+    /*margin: 0px auto auto 0px;*/
     /*padding: 40px;*/
     width: 450px;
     height: 220px;
-    background: black;
+    /*background: black;*/
 
     display: flex;
     flex-direction: column;
   }
   
-  #page-create-point form h1 {
-    font-size: 36px;
-  }
-  
-  #page-create-point form fieldset {
-    margin-top: 64px;
-    min-inline-size: auto;
-    border: 0;
-  }
-  
-  #page-create-point form legend {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 40px;
-  }
-  
-  #page-create-point form legend h2 {
-    font-size: 24px;
-  }
-  
-  #page-create-point form legend span {
-    font-size: 14px;
-    font-weight: normal;
-    color: var(--text-color);
-  }
-  
-  #page-create-point form .field-group {
-    flex: 1;
-    display: flex;
-  }
-  
-  #page-login .content form .field-group .field {
+  div#page-login div.content form div.field-group div.field {
     flex: 1;
     display: flex;
     flex-direction: column;
   }
 
-  #page-login .content form .field-group .field label {
+  div#page-login div.content form div.field-group div.field label {
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
@@ -174,9 +68,9 @@
     margin-bottom: 10px;
   }
   
-  #page-login .content form .field-group .field input[type=text],
-  #page-login .content form .field-group .field input[type=email],
-  #page-login .content form .field-group .field input[type=password] {
+  div#page-login div.content form div.field-group div.field input[type=text],
+  div#page-login div.content form div.field-group div.field input[type=email],
+  div#page-login div.content form div.field-group div.field input[type=password] {
     /*flex: 1;*/
     height: 30px;
     width: 450px;
@@ -189,151 +83,89 @@
     margin-bottom: 10px;
   }
 
-  #page-login .content form .field-group .field input:focus {
+  div#page-login div.content form div.field-group div.field input:focus {
     outline: none !important;
     border:2px solid #38607A;
 }
 
-#page-login .content form .field-group button {
+div#page-login div.content form div.field-group div.button-group {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 30px;
+  /*background-color: chartreuse;*/
+}
+
+div#page-login div.content form div.field-group div.button-group button {
   width: 99px;
   height: 30px;
   background: #009BFF;
   border-radius: 8px;
   color: #FFF;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 1.6rem;
   border: 0;
   align-self: flex-start;
-  margin-top: 40px;
+  margin-bottom: 0;
   transition: background-color 0.2s;
   cursor: pointer;
 }
 
-#page-login .content form .field-group button:hover {
+div#page-login div.content form div.field-group div.button-group a {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.4rem;
+  /*line-height: 38px;*/
+  /* or 271% */
+  color: var(--primary-color);
+  /*background-color: brown;*/
+  margin-right: 0;
+  margin-left: auto;
+  align-self: center;
+  
+
+  text-decoration-line: underline;
+}
+
+#page-login .content form .field-group .button-group button:hover {
   background: #0089E1;
 }
 
-#page-login .content form .field-group a {
-  /*width: 99px;
-  height: 30px;*/
-  /*border-radius: 8px;*/
+div#page-login div.content form main {
+  width: 450px;
+  margin-right: 0;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /*background-color: tomato;*/
+}
+
+div#page-login div.content form main h6 {
+  /*margin-left: 135px;*/
+  margin-top: 50px;
+  /*background-color: chartreuse;*/
+  width: 300px;
+  height: 40px;
+}
+
+div#page-login div.content form main button.register {
+  width: 120px;
+  height: 40px;
+  background: #009BFF;
+  border-radius: 8px;
   color: #FFF;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 1.6rem;
   border: 0;
-  align-self: flex-end;
-  /*margin-top: 40px;*/
-  transition: background-color 0.2s;
   cursor: pointer;
+
+  /*margin-left: 135px;*/
+  margin-bottom: 70px;
+  margin-top: auto;
 }
-  
-  #page-create-point form .field select {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    flex: 1;
-    background: #F0F0F5;
-    border-radius: 8px;
-    border: 0;
-    padding: 16px 24px;
-    font-size: 16px;
-    color: #000000;
-  }
-  
-  #page-create-point form .field input::placeholder {
-    color: #A0A0B2;
-  }
-  
-  #page-create-point form .field label {
-    font-size: 14px;
-    margin-bottom: 8px;
-  }
-  
-  #page-create-point form .field :disabled {
-    cursor: not-allowed;
-  }
-  
-  #page-create-point form .field-group .field + .field {
-    margin-left: 24px;
-  }
-  
-  #page-create-point form .field-group input + input {
-    margin-left: 24px;
-  }
-  
-  #page-create-point form .field-check {
-    flex-direction: row;
-    align-items: center;
-  }
-  
-  #page-create-point form .field-check input[type=checkbox] {
-    background: #F0F0F5;
-  }
-  
-  #page-create-point form .field-check label {
-    margin: 0 0 0 8px;
-  }
-  
-  #page-create-point form .leaflet-container {
-    width: 100%;
-    height: 350px;
-    border-radius: 8px;
-    margin-bottom: 24px;
-  }
-  
-  #page-create-point form button {
-    width: 260px;
-    height: 56px;
-    background: var(--primary-color);
-    border-radius: 8px;
-    color: #FFF;
-    font-weight: bold;
-    font-size: 16px;
-    border: 0;
-    align-self: flex-end;
-    margin-top: 40px;
-    transition: background-color 0.2s;
-    cursor: pointer;
-  }
-  
-  #page-create-point form button:hover {
-    background: #2FB86E;
-  }
-  
-  .items-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 16px;
-    list-style: none;
-  }
-  
-  .items-grid li {
-    background: #f5f5f5;
-    border: 2px solid #f5f5f5;
-    height: 180px;
-    border-radius: 8px;
-    padding: 32px 24px 16px;
-  
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-  
-    text-align: center;
-  
-    cursor: pointer;
-  }
-  
-  .items-grid li span {
-    flex: 1;
-    margin-top: 12px;
-  
-    display: flex;
-    align-items: center;
-    color: var(--title-color)
-  }
-  
-  .items-grid li.selected {
-    background: #E1FAEC;
-    border: 2px solid #34CB79;
-  }
+
+div#page-login div.content form main button:hover {
+  background-color: var(--secondary-color);
+}
