--- a/web/src/pages/Home/Home.css
+++ b/web/src/pages/Home/Home.css
@@ -1,56 +1,43 @@
-div#page-home {
-  height: 100vh;
-
-  background: url("../../assets/home-background.svg") no-repeat right bottom, 
-              linear-gradient(180deg, #F0F0F5 0%, #FFFFFF 100%);
-}
-
-div#page-home .content {
-  width: 76%;
+main.home {
+  width: 100%;
+  /*max-height: 600px;*/
   height: 100%;
-  max-width: 1100px;
-  margin: 0 auto;
-  /*padding: 0 30px 0 30px;*/
-
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
-  /*background-color: tomato;*/
-}
-
-#page-home .content main {
-  /*flex: 1;*/
-  width: 90%;
-  max-width: 600px;
   margin: 30px 0 0;
 
   display: flex;
   flex-direction: column;
   justify-content: top;
+
+  /*background-color: tomato;*/
 }
 
-#page-home .content main h1 {
+main.home h1.home {
   font-size: 4.6rem;
   color: var(--title-color);
+  max-width: 600px;
+  width: 100%;
+
+  /*background-color: teal;*/
 }
 
-#page-home .content main p {
+main.home p {
   font-size: 2.0rem;
-  margin-top: 18px;
+  margin-top: 20px;
   line-height: 38px;
-  max-width: 400px;
+  max-width: 500px;
+  width: 100%;
   color: var(--primary-color);
+
+  /*background-color: yellowgreen;*/
 }
 
-#page-home .content main a {
+main.home a {
   width: 100%;
   max-width: 275px;
   height: 57px;
-  background: #009BFF;
+  background: var(--tertiary-color);
   border-radius: 8px;
   text-decoration: none;
-
   display: flex;
   align-items: center;
   overflow: hidden;
@@ -58,8 +45,7 @@ div#page-home .content {
   margin-top: 30px;
 }
 
-#page-home .content main a span {
-  display: block;
+main.home a span {
   background: rgba(0, 0, 0, 0.08);
   width: 72px;
   height: 72px;
@@ -70,128 +56,79 @@ div#page-home .content {
   transition: background-color 0.2s;
 }
 
-#page-home .content main a span svg {
+main.home a span svg {
   color: #FFF;
   width: 20px;
   height: 20px;
 }
 
-#page-home .content main a strong {
+main.home a strong {
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   flex: 1;
   text-align: center;
   color: #FFF;
 }
 
-#page-home .content main a:hover {
+main.home a:hover {
   background: #0089E1;
 }
-  
-/*@media(max-width: 900px) {
-    #page-home .content {
-      align-items: center;
-      text-align: center;
-    }
-  
-    #page-home .content header {
-      margin: 48px auto 0;
-    }
-  
-    #page-home .content main {
-      align-items: center;
-    }
-  
-    #page-home .content main h1 {
-      font-size: 42px;
-    }
-  
-    #page-home .content main p {
-      font-size: 24px;
-    }
-  }*/
 
-@media(max-width: 1000px){
-  #page-home .content main {
-    max-width: 40rem;
-    transition-property: max-width;
-    transition-duration: 200ms;
+@media(max-width: 800px) {
+  main.home {
+    align-items: center;
+    transition: all 200ms;
   }
 
-  #page-home .content main h1 {
-    font-size: 3.6rem;
-    transition-property: font-size;
-    transition-duration: 200ms;
+  main.home h1.home {
+    text-align: center;
+    font-size: 3.0rem;
+    transition: all 200ms;
   }
 
-  #page-home .content main p {
-    font-size: 2.0rem;
-    max-width: 30rem;
-    transition-property: max-width, font-size;
-    transition-duration: 200ms;
+  main.home p {
+    text-align: center;
+    font-size: 1.8rem;
+    transition: all 200ms;
   }
 
-  #page-home .content main a {
-    max-width: 20rem;
-    height: 4.5rem;
-    margin-top: 2rem;
-    transition-property: max-width, height, margin-top;
-    transition-duration: 200ms;
+  main.home a {
+    max-width: 200px;
+    height: 44px;
   }
 
-  #page-home .content main a strong {
+  main.home a strong {
     font-size: 1.4rem;
-    transition-property: font-size;
-    transition-duration: 200ms;
-  }
-}
-
-@media(min-width: 1000px){
-  #page-home .content main {
-    max-width: 60rem;
-    transition-property: max-width;
-    transition-duration: 200ms;
-  }
-
-  #page-home .content main h1 {
-    font-size: 4.6rem;
-    transition-property: font-size;
-    transition-duration: 200ms;
-  }
-
-  #page-home .content main p {
-    font-size: 2.0rem;
-    max-width: 400px;
-    transition-property: max-width, font-size;
-    transition-duration: 200ms;
-  }
-
-  #page-home .content main a {
-    max-width: 275px;
-    height: 57px;
-    margin-top: 30px;
-    transition-property: max-width, height, margin-top;
-    transition-duration: 200ms;
-  }
-
-  #page-home .content main a strong {
-    font-size: 1.6rem;
-    transition-property: font-size;
-    transition-duration: 200ms;
-  }
-}
-
-@media(max-width: 945px){
-  div#page-home {
-    background: url("../../assets/home-background.svg") no-repeat center bottom, 
-                linear-gradient(180deg, #F0F0F5 0%, #FFFFFF 100%);
   }
 }
 
 @media(max-width: 600px) {
-  #page-home .content {
-    width: 85%;
+  main.home {
+    margin-top: 50px;
+  }
+
+  main.home h1.home {
+    text-align: center;
+    font-size: 2.6rem;
+    transition: all 200ms;
+  }
+
+  main.home p {
+    text-align: center;
+    font-size: 1.6rem;
+    margin-top: 40px;
+    transition: all 200ms;
+  }
+
+  main.home a {
+    max-width: 200px;
+    height: 44px;
+    margin-top: 60px;
+  }
+
+  main.home a strong {
+    font-size: 1.4rem;
   }
 }
