--- a/web/src/components/Menu/Menu.css
+++ b/web/src/components/Menu/Menu.css
@@ -36,7 +36,7 @@ div.menu-section button.arrow {
     cursor: pointer;
 }
   
-div.menu-section nav ul li a {
+div.menu-section a {
     text-decoration: none;
     font-family: Roboto;
     font-style: normal;
@@ -45,7 +45,8 @@ div.menu-section nav ul li a {
     color: var(--primary-color);
     display: flex;
     justify-content: center;
-
+    margin-right: 80px;
+    transition: margin-right 200ms;
     /*background-color: green;*/
 }
   
@@ -56,102 +57,43 @@ div.menu-section nav ul li a {
     }
 }
 
-@media(min-width: 1001px){
-    div.menu-section nav ul li a {
-        margin-right: 80px;
-        transition: margin-right 200ms;
-    }
-}
-
 @media(max-width: 800px){
 
     div.menu-section a.login {
         all: inherit;
     }
 
-    div.menu-section div.menu-toggle {
-        width: 40px;
-        height: 30px;
-        margin-right: 0;
-    }
-
-    div.menu-section div.menu-toggle div.one,
-    div.menu-section div.menu-toggle div.two,
-    div.menu-section div.menu-toggle div.three {
-        background-color: var(--primary-color);
-        height: 5px;
-        width: 100%;
-        margin: 6px auto;
-        transition: all 500ms;
-    }
-
-    div.menu-section.on {
-        position: absolute;
-        top: 0;
-        left: 0;
-
-        width: 100vw;
-        height: 100vh;
-
-        background-color: var(--primary-color);
-
-        z-index: 10;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        overflow: hidden;
-
-        transition: all 200ms;
-    }
-
-    div.menu-section.on nav {
-        display: block;
-        width: 100%;
-    } 
-
-    div.menu-section.on nav ul {
-        display: block;
-    } 
-
-    div.menu-section.on nav ul li a {
+    div.menu-section .hamburguer-menu-link {
+        text-decoration: none;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
         color: white;
         font-size: 3rem;
         line-height: 8rem;
         width: 100%;
     }
 
-    div.menu-section.on nav ul li a:hover {
+    div.menu-section .hamburguer-menu-link.button {
+        background-color: transparent;
+        cursor: pointer;
+        outline: none;
+        border: 0;
+    }
+
+
+    div.menu-section .hamburguer-menu-link:hover {
         background-color: var(--secondary-color);
     }
 
-    div.menu-section.on nav ul li.unsigned a.login {
+    div.menu-section p.hello-hamburguer {
+        font-family: Ubuntu;
+        font-style: normal;
         font-weight: normal;
+        font-size: 2rem;
+        line-height: 16px;
         text-align: center;
-    }
-
-    div.menu-section.on div.menu-toggle {
-        position: absolute;
-        right:75px;
-        top: 50px;
-        transition: all 500ms;
-    }
-
-    div.menu-section.on div.menu-toggle div.one {
-        transform: rotate(45deg) translate(7px, 7px);
-        background-color: white;
-        transition: all 500ms;
-    }
-
-    div.menu-section.on div.menu-toggle div.two {
-        opacity: 0;;
-    }
-
-    div.menu-section.on div.menu-toggle div.three {
-        transform: rotate(-45deg) translate(8px, -9px);
-        background-color: white;
-        transition: all 500ms;
+        color: #fff;
     }
 }
 
@@ -159,34 +101,5 @@ div.menu-section nav ul li a {
 
     div.menu-section nav ul li a span:hover {
         color: #0089E1;
-    }
-
-    div.menu-section div.menu-toggle {
-        display: none;
-    }
-}
-
-@media(max-width: 600px) {
-    div.menu-section div.menu-toggle {
-        width: 30px;
-        height: 22.5px;
-        margin-right: 0;
-        transition: all 500ms;
-    }
-
-    div.menu-section div.menu-toggle div.one,
-    div.menu-section div.menu-toggle div.two,
-    div.menu-section div.menu-toggle div.three {
-        height: 3.75px;
-        transition: all 500ms;
-    }
-
-    div.menu-section.on div.menu-toggle {
-        right:38px;
-        top: 45px;
-    }
-
-    div.menu-section.on div.menu-toggle div.one {
-        transform: rotate(45deg) translate(5px, 7px);
     }
 }
