--- a/web/src/components/NavItem/NavItem.css
+++ b/web/src/components/NavItem/NavItem.css
@@ -5,3 +5,17 @@ li.nav-item {
     align-items: center;
     /*background-color: blue;*/
 }
+
+div.menu-section button.icon-button {
+    width: 30px;
+    height: 30px;
+    background-color: #009BFF;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 0;
+    border: none;
+    outline: 0;
+    cursor: pointer;
+}
