--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,5 +1,6 @@
 :root {
     --primary-color: #38607A;
+    --primary-color-rgb: 56, 96, 122;
     --secondary-color: #2C85BF;
     --tertiary-color: #009BFF;
     --title-color: #38607A;
