--- a/web/src/components/FormBox/FormBox.css
+++ b/web/src/components/FormBox/FormBox.css
@@ -1,10 +1,18 @@
 div.formbox {
     margin: 0px auto;
     width: 100%;
-    height: 300px;
+    min-height: 300px;
+    /*height: 10vh;*/
     background: linear-gradient(90deg, rgba(0, 155, 255, 0.15) 0%, rgba(227, 17, 17, 0.1) 100%);
 
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+@media(max-width: 800px) {
+  div.formbox {
+    flex-direction: column;
+    height: 60vh;
   }
+}
