--- a/web/src/components/RegisterModal/RegisterModal.css
+++ b/web/src/components/RegisterModal/RegisterModal.css
@@ -141,15 +141,16 @@ div.modal-box.success {
 
 div.modal-box.success span.success {
   width: 100%;
-  height: 85%;
+  height: 70%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: relative;
   /*background-color: violet;*/
 }
 
 div.modal-box.success span.success h3 {
-  margin-left: 15px;
+  margin-top: 15px;
+  font-weight: normal;
+  text-align: center;
 }
